--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -49,6 +49,9 @@ jobs:
       uses: docker/build-push-action@0565240e2d4ab88bba5387d719585280857ece09 # v5.0.0
       with:
         context: openresty
+        platforms: |
+          linux/amd64
+          linux/arm64
         push: true
         tags: |
           ${{ secrets.DOCKERHUB_USERNAME }}/openresty:latest        
