--- a/openresty/Dockerfile
+++ b/openresty/Dockerfile
@@ -1,5 +1,5 @@
 
-FROM docker.io/bitnami/minideb:bullseye
+FROM docker.io/bitnami/minideb:bullseye as builder
 
 ARG TARGETARCH
 
@@ -66,5 +66,38 @@ ENV APP_VERSION=${RESTY_VERSION} \
 
 WORKDIR /app
 USER root
+ENTRYPOINT [ "/opt/bitnami/scripts/openresty/entrypoint.sh" ]
+CMD [ "/opt/bitnami/scripts/openresty/run.sh" ]
+
+
+#########################################
+FROM docker.io/bitnami/minideb:bullseye
+USER root
+
+ENV HOME="/home/openresty" \
+    OS_ARCH="${TARGETARCH:-amd64}" \
+    OS_FLAVOUR="debian-11" \
+    OS_NAME="linux"
+
+COPY prebuildfs /
+SHELL ["/bin/bash", "-o", "pipefail", "-c"]
+
+# 将上一个阶段publish文件夹下的所有文件复制进来
+COPY --from=builder /opt/bitnami/openresty /opt/bitnami/openresty
+
+RUN install_packages ca-certificates curl libbrotli1 libbsd0 libcrypt1 libdeflate0 libexpat1 libfontconfig1 libfreetype6 libgcc-s1 libgcrypt20 libgd3 libgeoip1 libgpg-error0 libicu67 libjbig0 libjpeg62-turbo liblzma5 libmd0 libpcre3 libpng16-16 libssl1.1 libstdc++6 libtiff5 libuuid1 libwebp6 libx11-6 libxau6 libxcb1 libxdmcp6 libxml2 libxpm4 libxslt1.1 libzstd1 perl procps zlib1g
+
+RUN apt-get update && apt-get upgrade -y && \
+    apt-get clean && rm -rf /var/lib/apt/lists /var/cache/apt/archives
+RUN chmod g+rwX /opt/bitnami
+
+COPY rootfs /
+RUN /opt/bitnami/scripts/openresty/postunpack.sh
+
+ENV APP_VERSION=${RESTY_VERSION} \
+    BITNAMI_APP_NAME="openresty" \
+    PATH="/opt/bitnami/openresty/bin:/opt/bitnami/openresty/luajit/bin:$PATH"
+
+WORKDIR /app
 ENTRYPOINT [ "/opt/bitnami/scripts/openresty/entrypoint.sh" ]
 CMD [ "/opt/bitnami/scripts/openresty/run.sh" ]
